--- a/ExamSolution/docker-compose.yml
+++ b/ExamSolution/docker-compose.yml
@@ -2,7 +2,16 @@ version: '3'
 
 services:
   api:
-    image: api
+    image: customer
+    ports: 
+     - "8000:80"
     build:
       context: .
       dockerfile: API\Dockerfile
+
+  webapi:
+    image: webapi
+    build:
+      context: .
+      dockerfile: WebApi\Dockerfile
+
