--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -8,4 +8,10 @@
     <ProjectReference Include="..\ExamSolution\BE\BE.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System.Data.SqlClient">
+      <HintPath>..\..\..\..\..\..\PROGRAM FILES\DOTNET\sdk\NuGetFallbackFolder\system.data.sqlclient\4.4.3\ref\netstandard2.0\System.Data.SqlClient.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
