--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -5,13 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ExamSolution\BE\BE.csproj" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.4.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="System.Data.SqlClient">
-      <HintPath>..\..\..\..\..\..\PROGRAM FILES\DOTNET\sdk\NuGetFallbackFolder\system.data.sqlclient\4.4.3\ref\netstandard2.0\System.Data.SqlClient.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\ExamSolution\BE\BE.csproj" />
   </ItemGroup>
 
 </Project>
