--- a/ExamSolution/DAL/DAL.csproj
+++ b/ExamSolution/DAL/DAL.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MySqlClient" Version="5.4.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BE\BE.csproj" />
   </ItemGroup>
 
