--- a/ExamSolution/WebApi/WebApi.csproj
+++ b/ExamSolution/WebApi/WebApi.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.4" />
     <PackageReference Include="MySqlClient" Version="5.4.2" />
     <PackageReference Include="Quartz" Version="3.0.4" />
+    <PackageReference Include="xunit" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
